# meshfix

./: CMakeLists.txt  ProjectHome.md  meshfix.cpp  meshfix.files  meshfix.md
JMeshLib-1.1/: makeconf
JMeshLib-1.1/include/: tin.h
JMeshLib-1.1/src/MESH_STRUCTURE/: Makefile  checkAndRepair.cpp
MeshFix/: meshfix.cpp
MeshFix/JMeshExt-1.0alpha_src/include/: triangleoctree.h
MeshFix/JMeshExt-1.0alpha_src/src/: holeFilling.cpp  mwExtensions.cpp  triangleoctree.cpp
MeshFix/contrib/JMeshLib/: jmeshlib1.1.files
MeshFix/contrib/octree/: octree.h  octree_iterator.cxx  octree_iterator.h  octree_path.cxx
MeshFix/include/: exttrimesh.h
contrib/JMeshLib/: CMakeLists.txt
contrib/JMeshLib/include/: j_mesh.h  list.h  tin.h
contrib/JMeshLib/src/JMESH/: jmesh.cpp
contrib/JMeshLib/src/MESH_STRUCTURE/: checkAndRepair.cpp  tin.cpp  triangle.cpp
contrib/octree/: Copyright.txt  octree.h  octree_node.h  octree_path.cxx  octree_path.h
include/: component.h  exttrimesh.h  triangleoctree.h
src/: cleaning.cpp  detectIntersections.cpp  mwExtensions.cpp  triangleoctree.cpp  uniform.cpp
test/: close_objects.off  sphere_decouple_test.sh  sphere_join_test.sh
trunk/: CMakeLists.txt  meshfix.cpp  meshfix.files
trunk/JMeshLib-1.1/: jmeshlib1.1.files  makeconf
trunk/JMeshLib-1.1/include/: tin.h  triangle.h
trunk/JMeshLib-1.1/src/MESH_STRUCTURE/: checkAndRepair.cpp  tin.cpp  triangle.cpp
trunk/MeshFix/: CMakeLists.txt  meshfix.cpp  meshfix.files
trunk/MeshFix/JMeshExt-1.0alpha_src/include/: exttrimesh.h
trunk/MeshFix/JMeshExt-1.0alpha_src/src/: holeFilling.cpp  mwExtensions.cpp
trunk/MeshFix/JMeshExt-1.0alpha_src/vc8/: JMeshExt.vcproj
trunk/MeshFix/contrib/JMeshLib/src/PRIMITIVES/: Makefile
trunk/MeshFix/contrib/octree/: octree  octree.cxx  octree_cursor.cxx  octree_cursor.h  octree_dox.h  octree_iterator.h  octree_node.cxx  octree_node.h  octree_path.h
trunk/MeshFix/qtcreator/: meshfix.files  meshfix.includes
trunk/contrib/JMeshLib/include/: tin.h  triangle.h
trunk/contrib/JMeshLib/src/JMESH/: Makefile  jmesh.cpp
trunk/contrib/JMeshLib/src/MESH_STRUCTURE/: Makefile  checkAndRepair.cpp  io.cpp  tin.cpp  triangle.cpp
trunk/contrib/octree/: Copyright.txt  octree.cxx  octree_node.cxx  readme.txt
trunk/include/: component.h  detectIntersections.h  exttrimesh.h  triangleoctree.h
trunk/src/: cleaning.cpp  detectIntersections.cpp  mwExtensions.cpp  triangleoctree.cpp  uniform.cpp
trunk/test/: close_objects_join_test.sh  sphere_decouple_test.sh  sphere_join_test.sh  test_join_components.sh
wiki/: meshfix.wiki
